--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot==20.7
-apscheduler==3.10.4
-huggingface_hub==0.25.1
-gspread==6.1.2
+gspread==6.2.1
 oauth2client==4.1.3
+python-dotenv==1.1.1
+python-telegram-bot==22.2
